Switch target to .NET 6 to support Godot

--- a/bindgen/config-generate-cs.json
+++ b/bindgen/config-generate-cs.json
@@ -4,15 +4,12 @@
   "namespaceName": "Tracy",
   "className": "PInvoke",
   "libraryName": "TracyClient",
-  "mappedNames": [
-],
-  "ignoredNames": [
-],
+  "mappedNames": [],
+  "ignoredNames": [],
   "isEnabledVerifyCSharpCodeCompiles": false,
-  "mappedCNamespaces": [
-  ],
+  "mappedCNamespaces": [],
   "isEnabledAssemblyAttributes": true,
-  "isEnabledLibraryImport": true,
+  "isEnabledLibraryImport": false,
   "isEnabledIdiomaticCSharp": true,
   "isEnabledEnumValueNamesUpperCase": false
 }
