--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,32 +1,31 @@
 name: "Commit generated C# code"
 
 on:
-  workflow_call:
+    workflow_call:
 
 permissions: write-all
 
 jobs:
+    commit-job:
+        name: "Commit generated C# code"
+        runs-on: ubuntu-20.04
+        if: github.actor == 'dependabot[bot]'
 
-  commit-job:
-    name: "Commit generated C# code"
-    runs-on: ubuntu-20.04
-    if: github.actor == 'dependabot[bot]'
+        steps:
+            - name: "Clone Git repository"
+              uses: actions/checkout@v4
+              with:
+                  submodules: "true"
 
-    steps:
-      - name: "Clone Git repository"
-        uses: actions/checkout@v2 
-        with:
-          submodules: 'true'
+            - name: "Download changes to commit"
+              uses: actions/download-artifact@v4
+              with:
+                  name: "bindgen-cs"
+                  path: "./src/cs/production/Tracy/Generated"
 
-      - name: "Download changes to commit"
-        uses: actions/download-artifact@v1
-        with:
-          name: "bindgen-cs"
-          path: "./src/cs/production/Tracy/Generated"
-
-      - name: "Add + commit + push (if necessary)"
-        uses: EndBug/add-and-commit@v7
-        with:
-          author_name: 'clibequilibrium'
-          author_email: 'clibequilibrium@users.noreply.github.com'
-          message: "Update C# bindings"
+            - name: "Add + commit + push (if necessary)"
+              uses: EndBug/add-and-commit@v7
+              with:
+                  author_name: "clibequilibrium"
+                  author_email: "clibequilibrium@users.noreply.github.com"
+                  message: "Update C# bindings"
