--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,24 +22,24 @@ jobs:
             contents: write
         steps:
             - name: "Clone Git repository"
-              uses: actions/checkout@master
+              uses: actions/checkout@v4
               with:
                   submodules: "recursive"
 
             - name: "Download native libraries (win-x64)"
-              uses: actions/download-artifact@v1
+              uses: actions/download-artifact@v4
               with:
                   name: "native-libraries-win-x64"
                   path: "./lib"
 
             - name: "Download native libraries (osx)"
-              uses: actions/download-artifact@v1
+              uses: actions/download-artifact@v4
               with:
                   name: "native-libraries-osx"
                   path: "./lib"
 
             - name: "Download native libraries (linux-x64)"
-              uses: actions/download-artifact@v1
+              uses: actions/download-artifact@v4
               with:
                   name: "native-libraries-linux-x64"
                   path: "./lib"
